added default layout, post layout, default css and a testpost

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,18 +18,7 @@
 	</div>
 
 	<div id="content"
-		<div id="home">
-	<h2>Blogeinträge</h2>
-	<ul class="posts">
-		
-		<li class="posts">
-			<a class="posttitle" href="/2016/10/11/mein-erster-post.html">Mein erster Post</a>
-			
-		</li>
-		
-	</ul>
-</div>
-
+		{{ content }}
 	</div>
 
 	<div id="footer">
